[package]
name = "pay_tx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.62"
csv = "1.1"
log = { version = "0.4", features = ["std"] }
env_logger = "0.9"
serde = { version = "1", features = ["derive"] }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
